# company-crud-api

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  conftest.py  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml
accounts/: serializers.py
accounts/migrations/: 0001_initial.py
accounts/tests/: test_models.py  test_views.py
companies/: admin.py  models.py  urls.py  views.py
companies/migrations/: 0001_initial.py  0002_remove_company_company_id.py  0003_alter_company_options_remove_company_user1_and_more.py
companies/tests/: test_models.py  test_views.py
company_crud_api/: asgi.py  settings.py  urls.py  wsgi.py
